// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndependentReview /> renders correctly with empty review 1`] = `
<div
  className="tilebox -col-300 -p-400"
>
  <h2
    className="heading -black -lead"
  >
    Independent Review By Car & Driving
  </h2>
  <p
    className="text -regular -darker"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "...",
        }
      }
    />
    <a
      className="link -teal -regular -plain"
      onClick={[Function]}
    >
      Read More
    </a>
  </p>
</div>
`;

exports[`<IndependentReview /> renders correctly with review 1`] = `
<div
  className="tilebox -col-300 -p-400"
>
  <h2
    className="heading -black -lead"
  >
    Independent Review By Car & Driving
  </h2>
  <p
    className="text -regular -darker"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h2>Test</h2>...",
        }
      }
    />
    <a
      className="link -teal -regular -plain"
      onClick={[Function]}
    >
      Read More
    </a>
  </p>
</div>
`;
